events section comented

--- a/courses/blockchain.html
+++ b/courses/blockchain.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-    <title>Software-Course | TIPS-G ALWAR</title>
+    <title>Blockchain | TIPS-G ALWAR</title>
     <meta name="description" content="" />
     <meta name="keywords" content="" />
 
@@ -33,7 +33,10 @@
       href="../assets/vendor/glightbox/css/glightbox.min.css"
       rel="stylesheet"
     />
-    <link href="../assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet" />
+    <link
+      href="../assets/vendor/swiper/swiper-bundle.min.css"
+      rel="stylesheet"
+    />
 
     <!-- Main CSS File -->
     <link href="../assets/css/main.css" rel="stylesheet" />
@@ -94,15 +97,15 @@
               </ul>
             </li>
             <!-- <li><a href="trainers.html">Trainers</a></li> -->
-            <li><a href="../pages/events.html">Events</a></li>
+            <!-- <li><a href="../pages/events.html">Events</a></li> -->
             <li><a href="../pages/exam.html" class="">Exam</a></li>
             <li>
-              <a href="../pages/contact.html" style="padding-right: 130px">Contact</a>
+              <a href="../pages/contact.html" style="padding-right: 130px"
+                >Contact</a
+              >
             </li>
             <li>
-              <a
-                class="btn-getstarted"
-                href="../pages/contact.html"
+              <a class="btn-getstarted" href="../pages/contact.html"
                 >Get Started</a
               >
             </li>
@@ -195,7 +198,9 @@
                   class="bi bi-check2-circle"
                   style="font-size: 22px; color: green"
                 ></i>
-                The blockchain industry is growing rapidly, creating a wide range of high-paying job opportunities across various sectors, including finance, healthcare, logistics, and government.
+                The blockchain industry is growing rapidly, creating a wide
+                range of high-paying job opportunities across various sectors,
+                including finance, healthcare, logistics, and government.
               </p>
               <p
                 class="fst-italic"
@@ -207,7 +212,10 @@
                   class="bi bi-check2-circle"
                   style="font-size: 22px; color: green"
                 ></i>
-                Blockchain professionals can work in diverse roles such as developers, smart contract engineers, security experts, and business analysts, all requiring expertise in decentralized systems and cryptography.
+                Blockchain professionals can work in diverse roles such as
+                developers, smart contract engineers, security experts, and
+                business analysts, all requiring expertise in decentralized
+                systems and cryptography.
               </p>
               <p
                 class="fst-italic"
@@ -219,7 +227,9 @@
                   class="bi bi-check2-circle"
                   style="font-size: 22px; color: green"
                 ></i>
-                The future scope of blockchain is vast, with applications extending beyond cryptocurrencies to areas like supply chain management, digital identity, and secure voting systems.
+                The future scope of blockchain is vast, with applications
+                extending beyond cryptocurrencies to areas like supply chain
+                management, digital identity, and secure voting systems.
               </p>
               <p
                 class="fst-italic"
@@ -231,7 +241,9 @@
                   class="bi bi-check2-circle"
                   style="font-size: 22px; color: green"
                 ></i>
-                As blockchain technology evolves, professionals will be at the forefront of innovation, shaping new advancements and driving automation, transparency, and security in multiple industries.
+                As blockchain technology evolves, professionals will be at the
+                forefront of innovation, shaping new advancements and driving
+                automation, transparency, and security in multiple industries.
               </p>
             </div>
           </div>
@@ -262,7 +274,7 @@
                     padding: 10px;
                     color: white;
                     border-radius: 10px;
-                    background:  var(--accent-color);
+                    background: var(--accent-color);
 
                     flex: 1;
                     margin-right: 10px;
@@ -280,7 +292,7 @@
                     padding: 10px;
                     color: white;
                     border-radius: 10px;
-                    background:  var(--accent-color);
+                    background: var(--accent-color);
 
                     flex: 1;
                     margin-right: 10px;
@@ -305,7 +317,7 @@
                 style="
                   border: none;
                   height: 5px;
-                  background:  var(--accent-color);
+                  background: var(--accent-color);
 
                   flex: 1;
                   margin-right: 10px;
@@ -374,7 +386,7 @@
                 style="
                   border: none;
                   height: 5px;
-                  background:  var(--accent-color);
+                  background: var(--accent-color);
 
                   flex: 1;
                   margin-right: 10px;
@@ -413,8 +425,7 @@
               data-aos-delay="10"
               data-aos-offset="100"
             >
-              <h5>Python Or C Programming
-              </h5>
+              <h5>Python Or C Programming</h5>
               <h5>1.5 Month</h5>
             </div>
             <div
@@ -446,7 +457,7 @@
                 style="
                   border: none;
                   height: 5px;
-                  background:  var(--accent-color);
+                  background: var(--accent-color);
 
                   flex: 1;
                   margin-right: 10px;
@@ -494,8 +505,7 @@
               data-aos-delay="10"
               data-aos-offset="100"
             >
-              <h5>Data Structures And Algorithms
-              </h5>
+              <h5>Data Structures And Algorithms</h5>
               <h5>2 Month</h5>
             </div>
             <div
@@ -504,8 +514,7 @@
               data-aos-delay="10"
               data-aos-offset="100"
             >
-              <h5>Basic of Blockchain and Cryptocurrency
-              </h5>
+              <h5>Basic of Blockchain and Cryptocurrency</h5>
               <h5>1 Month</h5>
             </div>
             <div
@@ -519,7 +528,7 @@
                 style="
                   border: none;
                   height: 5px;
-                  background:  var(--accent-color);
+                  background: var(--accent-color);
 
                   flex: 1;
                   margin-right: 10px;
@@ -558,8 +567,7 @@
               data-aos-delay="10"
               data-aos-offset="100"
             >
-              <h5>Frontend Framework
-              </h5>
+              <h5>Frontend Framework</h5>
               <h5>1.5 Months</h5>
             </div>
             <div
@@ -568,8 +576,7 @@
               data-aos-delay="10"
               data-aos-offset="100"
             >
-              <h5>Version Control and Postman
-              </h5>
+              <h5>Version Control and Postman</h5>
               <h5>1 Month</h5>
             </div>
             <div
@@ -578,8 +585,7 @@
               data-aos-delay="10"
               data-aos-offset="100"
             >
-              <h5>Intro To Blockchain Advance
-              </h5>
+              <h5>Intro To Blockchain Advance</h5>
               <h5>1.5 Month</h5>
             </div>
             <div
@@ -593,7 +599,7 @@
                 style="
                   border: none;
                   height: 5px;
-                  background:  var(--accent-color);
+                  background: var(--accent-color);
 
                   flex: 1;
                   margin-right: 10px;
@@ -631,8 +637,7 @@
               data-aos-delay="10"
               data-aos-offset="100"
             >
-              <h5>Programming In Solidity
-              </h5>
+              <h5>Programming In Solidity</h5>
               <h5>1.5 Months</h5>
             </div>
             <div
@@ -641,8 +646,7 @@
               data-aos-delay="10"
               data-aos-offset="100"
             >
-              <h5>Ethereum Blockchain
-              </h5>
+              <h5>Ethereum Blockchain</h5>
               <h5>1 Month</h5>
             </div>
             <div
@@ -651,8 +655,7 @@
               data-aos-delay="10"
               data-aos-offset="100"
             >
-              <h5>Smart Contracts
-              </h5>
+              <h5>Smart Contracts</h5>
               <h5>1.5 Months</h5>
             </div>
             <div
@@ -666,7 +669,7 @@
                 style="
                   border: none;
                   height: 5px;
-                  background:  var(--accent-color);
+                  background: var(--accent-color);
 
                   flex: 1;
                   margin-right: 10px;
@@ -704,8 +707,7 @@
               data-aos-delay="10"
               data-aos-offset="100"
             >
-              <h5>DApp With Web 3
-              </h5>
+              <h5>DApp With Web 3</h5>
               <h5>1.5 Months</h5>
             </div>
             <div
@@ -714,8 +716,7 @@
               data-aos-delay="10"
               data-aos-offset="100"
             >
-              <h5>Hyperledger Febric & Advanced Topics
-              </h5>
+              <h5>Hyperledger Febric & Advanced Topics</h5>
               <h5>1 Months</h5>
             </div>
             <div
@@ -724,8 +725,7 @@
               data-aos-delay="10"
               data-aos-offset="100"
             >
-              <h5>Blockchain Security
-              </h5>
+              <h5>Blockchain Security</h5>
               <h5>0.5 Month</h5>
             </div>
             <div
@@ -734,8 +734,7 @@
               data-aos-delay="10"
               data-aos-offset="100"
             >
-              <h5>Blockchain/Smart Contract Deployment
-              </h5>
+              <h5>Blockchain/Smart Contract Deployment</h5>
               <h5>1.5 Months</h5>
             </div>
             <div
@@ -749,7 +748,7 @@
                 style="
                   border: none;
                   height: 5px;
-                  background:  var(--accent-color);
+                  background: var(--accent-color);
 
                   flex: 1;
                   margin-right: 10px;
@@ -784,7 +783,6 @@
         </div>
         <!-- </div> -->
       </section>
-
 
       <!-- Testimonials Section -->
       <section id="testimonials" class="testimonials section">
@@ -997,18 +995,19 @@
       <!-- /Testimonials Section -->
     </main>
 
+    <!-- Footer Start -->
     <footer
       id="footer"
       class="footer position-relative light-background"
-      style="border-top: 3px solid var(--accent-color)"
+      style="border-top: 3px solid #29206f"
     >
       <div class="container footer-top">
         <div class="row" style="display: flex; justify-content: space-around">
           <div class="col-lg-4 col-md-6 footer-about">
             <a href="../index.html" class="logo d-flex align-items-center">
               <span class="sitename"
-                >TIPS-G <br />
-                ALWAR</span
+                ><b>TIPS-G</b> <br />
+                <b>ALWAR</b></span
               >
             </a>
             <div class="footer-contact pt-3">
@@ -1022,7 +1021,9 @@
               <p><strong>Email:</strong> <span>tipsgalwar@gmail.com </span></p>
             </div>
             <div class="social-links d-flex mt-4">
-              <a href=""><i class="bi bi-twitter-x"></i></a>
+              <a href="https://www.youtube.com/@TIPS-GALWAR"
+                ><i class="bi bi-youtube"></i
+              ></a>
               <a href=""><i class="bi bi-facebook"></i></a>
               <a href=""><i class="bi bi-instagram"></i></a>
               <a href=""><i class="bi bi-linkedin"></i></a>
@@ -1032,7 +1033,7 @@
           <div class="col-lg-2 col-md-3 footer-links">
             <h4>Useful Links</h4>
             <ul>
-<li><a href="../index.html">Home</a></li>
+              <li><a href="../index.html">Home</a></li>
               <li><a href="../pages/about.html">About us</a></li>
               <li><a href="../pages/courses.html">Courses</a></li>
               <li><a href="../pages/events.html">Events</a></li>
@@ -1045,27 +1046,32 @@
           <div class="col-lg-2 col-md-3 footer-links">
             <h4>Our Courses</h4>
             <ul>
-              <li><a href="software.html">Software Development</a></li>
-              <li><a href="datascience.html">Data Science</a></li>
-              <li><a href="blockchain.html">Blockchain Technology</a></li>
-              <li><a href="ai-ml.html">AI/ML</a></li>
-              <li><a href="cybersecurity.html">Cybersecurity</a></li>
-              <li><a href="digitalmarketing.html">Digital Marketing</a></li>
+              <li>
+                <a href="../courses/software.html">Software Development</a>
+              </li>
+              <li><a href="../courses/datascience.html">Data Science</a></li>
+              <li>
+                <a href="../courses/digitalmarketing.html">Digital Marketing</a>
+              </li>
+              <li>
+                <a href="../courses/blockchain.html">Blockchain Technology</a>
+              </li>
+              <li><a href="../courses/ai-ml.html">AI/ML</a></li>
+              <li><a href="../courses/cybersecurity.html">Cybersecurity</a></li>
             </ul>
           </div>
         </div>
       </div>
 
-      <div
-        class="container copyright text-center mt-4"
-      >
+      <div class="container copyright text-center mt-4">
         <p>
           © <span>Copyright</span>
-          <strong>TIPS-G Alwar</strong>
+          <b>TIPS-G Alwar</b>
           <span>All Rights Reserved</span>
         </p>
       </div>
     </footer>
+    <!-- Footer End -->
 
     <!-- Scroll Top -->
     <a
