--- a/courses/cybersecurity.html
+++ b/courses/cybersecurity.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-    <title>Software-Course | TIPS-G ALWAR</title>
+    <title>Cybersecurity - Course | TIPS-G ALWAR</title>
     <meta name="description" content="" />
     <meta name="keywords" content="" />
 
@@ -33,7 +33,10 @@
       href="../assets/vendor/glightbox/css/glightbox.min.css"
       rel="stylesheet"
     />
-    <link href="../assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet" />
+    <link
+      href="../assets/vendor/swiper/swiper-bundle.min.css"
+      rel="stylesheet"
+    />
 
     <!-- Main CSS File -->
     <link href="../assets/css/main.css" rel="stylesheet" />
@@ -94,15 +97,15 @@
               </ul>
             </li>
             <!-- <li><a href="trainers.html">Trainers</a></li> -->
-            <li><a href="../pages/events.html">Events</a></li>
+            <!-- <li><a href="../pages/events.html">Events</a></li> -->
             <li><a href="../pages/exam.html" class="">Exam</a></li>
             <li>
-              <a href="../pages/contact.html" style="padding-right: 130px">Contact</a>
+              <a href="../pages/contact.html" style="padding-right: 130px"
+                >Contact</a
+              >
             </li>
             <li>
-              <a
-                class="btn-getstarted"
-                href="../pages/contact.html"
+              <a class="btn-getstarted" href="../pages/contact.html"
                 >Get Started</a
               >
             </li>
@@ -195,8 +198,9 @@
                   class="bi bi-check2-circle"
                   style="font-size: 22px; color: green"
                 ></i>
-                Cyber Security is the backbone of the digital age, protecting critical infrastructures.
-A career in this field offers endless challenges, rewards, and opportunities to make an impact.
+                Cyber Security is the backbone of the digital age, protecting
+                critical infrastructures. A career in this field offers endless
+                challenges, rewards, and opportunities to make an impact.
               </p>
               <p
                 class="fst-italic"
@@ -209,7 +213,8 @@ A career in this field offers endless challenges, rewards, and opportunities to 
                   style="font-size: 22px; color: green"
                 ></i>
                 Defend sensitive data and build trust in a digital-first world.
-With rapid technological growth, cyber security professionals are more vital than ever.
+                With rapid technological growth, cyber security professionals
+                are more vital than ever.
               </p>
               <p
                 class="fst-italic"
@@ -221,8 +226,10 @@ With rapid technological growth, cyber security professionals are more vital tha
                   class="bi bi-check2-circle"
                   style="font-size: 22px; color: green"
                 ></i>
-                Cyber Security offers roles like Security Analyst, Ethical Hacker, and Cyber Forensics Expert.
-These jobs provide competitive salaries, job security, and the chance to work on cutting-edge technologies.
+                Cyber Security offers roles like Security Analyst, Ethical
+                Hacker, and Cyber Forensics Expert. These jobs provide
+                competitive salaries, job security, and the chance to work on
+                cutting-edge technologies.
               </p>
               <p
                 class="fst-italic"
@@ -234,15 +241,16 @@ These jobs provide competitive salaries, job security, and the chance to work on
                   class="bi bi-check2-circle"
                   style="font-size: 22px; color: green"
                 ></i>
-                career in Cyber Security means continuous learning and staying ahead of evolving threats.
-                It opens doors to leadership positions and opportunities across industries like finance, healthcare, and government.
+                career in Cyber Security means continuous learning and staying
+                ahead of evolving threats. It opens doors to leadership
+                positions and opportunities across industries like finance,
+                healthcare, and government.
               </p>
             </div>
           </div>
         </div>
       </section>
 
-        
       <!-- /Courses Course Details Section -->
 
       <section id="about-us" class="section about-us courses-course-details">
@@ -268,7 +276,7 @@ These jobs provide competitive salaries, job security, and the chance to work on
                     padding: 10px;
                     color: white;
                     border-radius: 10px;
-                    background:  var(--accent-color);
+                    background: var(--accent-color);
 
                     flex: 1;
                     margin-right: 10px;
@@ -286,7 +294,7 @@ These jobs provide competitive salaries, job security, and the chance to work on
                     padding: 10px;
                     color: white;
                     border-radius: 10px;
-                    background:  var(--accent-color);
+                    background: var(--accent-color);
 
                     flex: 1;
                     margin-right: 10px;
@@ -311,7 +319,7 @@ These jobs provide competitive salaries, job security, and the chance to work on
                 style="
                   border: none;
                   height: 5px;
-                  background:  var(--accent-color);
+                  background: var(--accent-color);
 
                   flex: 1;
                   margin-right: 10px;
@@ -357,8 +365,7 @@ These jobs provide competitive salaries, job security, and the chance to work on
               data-aos-delay="10"
               data-aos-offset="100"
             >
-              <h5>Networking Basics
-              </h5>
+              <h5>Networking Basics</h5>
               <h5>1.5 Months</h5>
             </div>
             <div
@@ -367,8 +374,7 @@ These jobs provide competitive salaries, job security, and the chance to work on
               data-aos-delay="10"
               data-aos-offset="100"
             >
-              <h5>Linux Essentials
-              </h5>
+              <h5>Linux Essentials</h5>
               <h5>1.5 Months</h5>
             </div>
             <div
@@ -382,7 +388,7 @@ These jobs provide competitive salaries, job security, and the chance to work on
                 style="
                   border: none;
                   height: 5px;
-                  background:  var(--accent-color);
+                  background: var(--accent-color);
 
                   flex: 1;
                   margin-right: 10px;
@@ -430,8 +436,7 @@ These jobs provide competitive salaries, job security, and the chance to work on
               data-aos-delay="10"
               data-aos-offset="100"
             >
-              <h5>Ethical Hacking
-              </h5>
+              <h5>Ethical Hacking</h5>
               <h5>2 Months</h5>
             </div>
             <div
@@ -445,7 +450,7 @@ These jobs provide competitive salaries, job security, and the chance to work on
                 style="
                   border: none;
                   height: 5px;
-                  background:  var(--accent-color);
+                  background: var(--accent-color);
 
                   flex: 1;
                   margin-right: 10px;
@@ -484,8 +489,7 @@ These jobs provide competitive salaries, job security, and the chance to work on
               data-aos-delay="10"
               data-aos-offset="100"
             >
-              <h5>Advance Penetration Testing
-              </h5>
+              <h5>Advance Penetration Testing</h5>
               <h5>2 Month</h5>
             </div>
             <div
@@ -494,8 +498,7 @@ These jobs provide competitive salaries, job security, and the chance to work on
               data-aos-delay="10"
               data-aos-offset="100"
             >
-              <h5>Cyber Forensics Investigation
-              </h5>
+              <h5>Cyber Forensics Investigation</h5>
               <h5>2 Months</h5>
             </div>
             <div
@@ -509,7 +512,7 @@ These jobs provide competitive salaries, job security, and the chance to work on
                 style="
                   border: none;
                   height: 5px;
-                  background:  var(--accent-color);
+                  background: var(--accent-color);
 
                   flex: 1;
                   margin-right: 10px;
@@ -548,8 +551,7 @@ These jobs provide competitive salaries, job security, and the chance to work on
               data-aos-delay="10"
               data-aos-offset="100"
             >
-              <h5>Web Application Security
-              </h5>
+              <h5>Web Application Security</h5>
               <h5>2 Months</h5>
             </div>
             <div
@@ -558,8 +560,7 @@ These jobs provide competitive salaries, job security, and the chance to work on
               data-aos-delay="10"
               data-aos-offset="100"
             >
-              <h5>Web Application Security - Mobile
-              </h5>
+              <h5>Web Application Security - Mobile</h5>
               <h5>2 Months</h5>
             </div>
             <div
@@ -573,7 +574,7 @@ These jobs provide competitive salaries, job security, and the chance to work on
                 style="
                   border: none;
                   height: 5px;
-                  background:  var(--accent-color);
+                  background: var(--accent-color);
 
                   flex: 1;
                   margin-right: 10px;
@@ -611,8 +612,7 @@ These jobs provide competitive salaries, job security, and the chance to work on
               data-aos-delay="10"
               data-aos-offset="100"
             >
-              <h5>Internet Of Things - Pentesting
-              </h5>
+              <h5>Internet Of Things - Pentesting</h5>
               <h5>2 Months</h5>
             </div>
             <div
@@ -621,8 +621,7 @@ These jobs provide competitive salaries, job security, and the chance to work on
               data-aos-delay="10"
               data-aos-offset="100"
             >
-              <h5>End Point Security
-              </h5>
+              <h5>End Point Security</h5>
               <h5>2 Months</h5>
             </div>
             <div
@@ -636,7 +635,7 @@ These jobs provide competitive salaries, job security, and the chance to work on
                 style="
                   border: none;
                   height: 5px;
-                  background:  var(--accent-color);
+                  background: var(--accent-color);
 
                   flex: 1;
                   margin-right: 10px;
@@ -674,8 +673,7 @@ These jobs provide competitive salaries, job security, and the chance to work on
               data-aos-delay="10"
               data-aos-offset="100"
             >
-              <h5>AWS Associate
-              </h5>
+              <h5>AWS Associate</h5>
               <h5>2 Months</h5>
             </div>
             <div
@@ -684,8 +682,7 @@ These jobs provide competitive salaries, job security, and the chance to work on
               data-aos-delay="10"
               data-aos-offset="100"
             >
-              <h5>AWS Security
-              </h5>
+              <h5>AWS Security</h5>
               <h5>2 Months</h5>
             </div>
             <div
@@ -699,7 +696,7 @@ These jobs provide competitive salaries, job security, and the chance to work on
                 style="
                   border: none;
                   height: 5px;
-                  background:  var(--accent-color);
+                  background: var(--accent-color);
 
                   flex: 1;
                   margin-right: 10px;
@@ -792,7 +789,12 @@ These jobs provide competitive salaries, job security, and the chance to work on
                     <p>
                       <i class="bi bi-quote quote-icon-left"></i>
                       <span
-                        >TIPS-G Alwar's AI/ML program has been a game-changer for me. The hands-on projects and real-world datasets helped me understand machine learning algorithms and artificial intelligence applications. The guidance from expert faculty made complex topics simple and clear.</span
+                        >TIPS-G Alwar's AI/ML program has been a game-changer
+                        for me. The hands-on projects and real-world datasets
+                        helped me understand machine learning algorithms and
+                        artificial intelligence applications. The guidance from
+                        expert faculty made complex topics simple and
+                        clear.</span
                       >
                       <i class="bi bi-quote quote-icon-right"></i>
                     </p>
@@ -936,18 +938,19 @@ These jobs provide competitive salaries, job security, and the chance to work on
       <!-- /Testimonials Section -->
     </main>
 
+    <!-- Footer Start -->
     <footer
       id="footer"
       class="footer position-relative light-background"
-      style="border-top: 3px solid var(--accent-color)"
+      style="border-top: 3px solid #29206f"
     >
       <div class="container footer-top">
         <div class="row" style="display: flex; justify-content: space-around">
           <div class="col-lg-4 col-md-6 footer-about">
             <a href="../index.html" class="logo d-flex align-items-center">
               <span class="sitename"
-                >TIPS-G <br />
-                ALWAR</span
+                ><b>TIPS-G</b> <br />
+                <b>ALWAR</b></span
               >
             </a>
             <div class="footer-contact pt-3">
@@ -961,7 +964,9 @@ These jobs provide competitive salaries, job security, and the chance to work on
               <p><strong>Email:</strong> <span>tipsgalwar@gmail.com </span></p>
             </div>
             <div class="social-links d-flex mt-4">
-              <a href=""><i class="bi bi-twitter-x"></i></a>
+              <a href="https://www.youtube.com/@TIPS-GALWAR"
+                ><i class="bi bi-youtube"></i
+              ></a>
               <a href=""><i class="bi bi-facebook"></i></a>
               <a href=""><i class="bi bi-instagram"></i></a>
               <a href=""><i class="bi bi-linkedin"></i></a>
@@ -971,7 +976,7 @@ These jobs provide competitive salaries, job security, and the chance to work on
           <div class="col-lg-2 col-md-3 footer-links">
             <h4>Useful Links</h4>
             <ul>
-<li><a href="../index.html">Home</a></li>
+              <li><a href="../index.html">Home</a></li>
               <li><a href="../pages/about.html">About us</a></li>
               <li><a href="../pages/courses.html">Courses</a></li>
               <li><a href="../pages/events.html">Events</a></li>
@@ -984,27 +989,32 @@ These jobs provide competitive salaries, job security, and the chance to work on
           <div class="col-lg-2 col-md-3 footer-links">
             <h4>Our Courses</h4>
             <ul>
-              <li><a href="software.html">Software Development</a></li>
-              <li><a href="datascience.html">Data Science</a></li>
-              <li><a href="blockchain.html">Blockchain Technology</a></li>
-              <li><a href="ai-ml.html">AI/ML</a></li>
-              <li><a href="cybersecurity.html">Cybersecurity</a></li>
-              <li><a href="digitalmarketing.html">Digital Marketing</a></li>
+              <li>
+                <a href="../courses/software.html">Software Development</a>
+              </li>
+              <li><a href="../courses/datascience.html">Data Science</a></li>
+              <li>
+                <a href="../courses/digitalmarketing.html">Digital Marketing</a>
+              </li>
+              <li>
+                <a href="../courses/blockchain.html">Blockchain Technology</a>
+              </li>
+              <li><a href="../courses/ai-ml.html">AI/ML</a></li>
+              <li><a href="../courses/cybersecurity.html">Cybersecurity</a></li>
             </ul>
           </div>
         </div>
       </div>
 
-      <div
-        class="container copyright text-center mt-4"
-      >
+      <div class="container copyright text-center mt-4">
         <p>
           © <span>Copyright</span>
-          <strong>TIPS-G Alwar</strong>
+          <b>TIPS-G Alwar</b>
           <span>All Rights Reserved</span>
         </p>
       </div>
     </footer>
+    <!-- Footer End -->
 
     <!-- Scroll Top -->
     <a
