--- a/courses/software.html
+++ b/courses/software.html
@@ -33,7 +33,10 @@
       href="../assets/vendor/glightbox/css/glightbox.min.css"
       rel="stylesheet"
     />
-    <link href="../assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet" />
+    <link
+      href="../assets/vendor/swiper/swiper-bundle.min.css"
+      rel="stylesheet"
+    />
 
     <!-- Main CSS File -->
     <link href="../assets/css/main.css" rel="stylesheet" />
@@ -95,16 +98,15 @@
               </ul>
             </li>
             <!-- <li><a href="trainers.html">Trainers</a></li> -->
-            <li><a href="../pages/events.html">Events</a></li>
+            <!-- <li><a href="../pages/events.html">Events</a></li> -->
             <li><a href="../pages/exam.html" class="">Exam</a></li>
             <li>
-              <a href="../pages/contact.html" style="padding-right: 130px">Contact</a>
+              <a href="../pages/contact.html" style="padding-right: 130px"
+                >Contact</a
+              >
             </li>
             <li>
-              <a
-                class="btn-getstarted"
-                
-                href="../pages/contact.html"
+              <a class="btn-getstarted" href="../pages/contact.html"
                 >Get Started</a
               >
             </li>
@@ -770,7 +772,7 @@
           <!-- <div class="row gy-4"> -->
           <div class="d-flex flex-column">
             <div>
-              <h1><b>1 Year Program</b></h2>
+              <h1><b>1 Year Program</b></h1>
               <div
                 style="
                   display: flex;
@@ -1296,18 +1298,19 @@
       <!-- /Testimonials Section -->
     </main>
 
+    <!-- Footer Start -->
     <footer
       id="footer"
       class="footer position-relative light-background"
-      style="border-top: 3px solid var(--accent-color)"
+      style="border-top: 3px solid #29206f"
     >
       <div class="container footer-top">
         <div class="row" style="display: flex; justify-content: space-around">
           <div class="col-lg-4 col-md-6 footer-about">
             <a href="../index.html" class="logo d-flex align-items-center">
               <span class="sitename"
-                >TIPS-G <br />
-                ALWAR</span
+                ><b>TIPS-G</b> <br />
+                <b>ALWAR</b></span
               >
             </a>
             <div class="footer-contact pt-3">
@@ -1321,7 +1324,9 @@
               <p><strong>Email:</strong> <span>tipsgalwar@gmail.com </span></p>
             </div>
             <div class="social-links d-flex mt-4">
-              <a href=""><i class="bi bi-twitter-x"></i></a>
+              <a href="https://www.youtube.com/@TIPS-GALWAR"
+                ><i class="bi bi-youtube"></i
+              ></a>
               <a href=""><i class="bi bi-facebook"></i></a>
               <a href=""><i class="bi bi-instagram"></i></a>
               <a href=""><i class="bi bi-linkedin"></i></a>
@@ -1331,7 +1336,7 @@
           <div class="col-lg-2 col-md-3 footer-links">
             <h4>Useful Links</h4>
             <ul>
-<li><a href="../index.html">Home</a></li>
+              <li><a href="../index.html">Home</a></li>
               <li><a href="../pages/about.html">About us</a></li>
               <li><a href="../pages/courses.html">Courses</a></li>
               <li><a href="../pages/events.html">Events</a></li>
@@ -1344,12 +1349,18 @@
           <div class="col-lg-2 col-md-3 footer-links">
             <h4>Our Courses</h4>
             <ul>
-              <li><a href="software.html">Software Development</a></li>
-              <li><a href="datascience.html">Data Science</a></li>
-              <li><a href="blockchain.html">Blockchain Technology</a></li>
-              <li><a href="ai-ml.html">AI/ML</a></li>
-              <li><a href="cybersecurity.html">Cybersecurity</a></li>
-              <li><a href="digitalmarketing.html">Digital Marketing</a></li>
+              <li>
+                <a href="../courses/software.html">Software Development</a>
+              </li>
+              <li><a href="../courses/datascience.html">Data Science</a></li>
+              <li>
+                <a href="../courses/digitalmarketing.html">Digital Marketing</a>
+              </li>
+              <li>
+                <a href="../courses/blockchain.html">Blockchain Technology</a>
+              </li>
+              <li><a href="../courses/ai-ml.html">AI/ML</a></li>
+              <li><a href="../courses/cybersecurity.html">Cybersecurity</a></li>
             </ul>
           </div>
         </div>
@@ -1358,11 +1369,12 @@
       <div class="container copyright text-center mt-4">
         <p>
           © <span>Copyright</span>
-          <strong>TIPS-G Alwar</strong>
+          <b>TIPS-G Alwar</b>
           <span>All Rights Reserved</span>
         </p>
       </div>
     </footer>
+    <!-- Footer End -->
 
     <!-- Scroll Top -->
     <a
