--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
               </ul>
             </li>
             <!-- <li><a href="trainers.html">Trainers</a></li> -->
-            <li><a href="./pages/events.html">Events</a></li>
+            <!-- <li><a href="./pages/events.html">Events</a></li> -->
             <li><a href="./pages/exam.html" class="">Exam</a></li>
             <li>
               <a href="./pages/contact.html" style="padding-right: 130px"
@@ -325,9 +325,10 @@
                     <i class="bi bi-clipboard-data"></i>
                     <h4>Industry Experts as Mentors</h4>
                     <p>
-                      Our training program is led by seasoned industry experts
-                      who bring real-world insights and hands-on experience to
-                      your learning journey.
+                      Our training program is led by experienced industry
+                      professionals who offer real-world insights, practical
+                      knowledge, and mentorship to enhance your learning journey
+                      and career growth in the tech industry.
                     </p>
                   </div>
                 </div>
@@ -340,10 +341,10 @@
                     <i class="bi bi-gem"></i>
                     <h4>Comprehensive Curriculum</h4>
                     <p>
-                      Our curriculum spans diverse tech domains, including Cyber
-                      Security, Data Science, AI/ML, Software Development,
-                      DevOps, Cloud Computing, and Digital Marketing, equipping
-                      you with the skills for tomorrow's technology landscape.
+                      Our curriculum covers Cyber Security, Data Science, AI/ML,
+                      Software Development, DevOps, Cloud Computing, and Digital
+                      Marketing, ensuring you gain in-demand skills to excel in
+                      today’s rapidly evolving technology landscape.
                     </p>
                   </div>
                 </div>
@@ -354,12 +355,9 @@
                     class="icon-box d-flex flex-column justify-content-center align-items-center"
                   >
                     <i class="bi bi-inboxes"></i>
-                    <h4>100% Paid Internship</h4>
+                    <h4>Paid Internship</h4>
                     <p>
-                      Gain invaluable industry experience through our 100% paid
-                      internship opportunity, where you'll apply your skills in
-                      a professional environment and broaden your professional
-                      network.
+                      Our fully paid internship provides hands-on industry experience, allowing you to apply your skills, gain professional exposure, and expand your network while working on real-world projects in top tech companies worldwide successfully.
                     </p>
                   </div>
                 </div>
@@ -623,7 +621,6 @@
             </div>
             <!-- End Data Science Course-->
 
-            
             <!-- Blockchain Technology Course -->
             <div
               class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0"
@@ -645,7 +642,9 @@
                     </a>
                   </div>
                   <h3>
-                    <a href="./courses/blockchain.html">Blockchain Technology</a>
+                    <a href="./courses/blockchain.html"
+                      >Blockchain Technology</a
+                    >
                   </h3>
                   <p class="description">
                     Discover the world of decentralized systems, blockchain
@@ -672,11 +671,18 @@
                   <div
                     class="d-flex justify-content-between align-items-center mb-3"
                   >
-                    <a href="./courses/digitalmarketing.html" style="color: white">
+                    <a
+                      href="./courses/digitalmarketing.html"
+                      style="color: white"
+                    >
                       <p class="category">Know More</p>
                     </a>
                   </div>
-                  <h3><a href="./courses/digitalmarketing.html">Digital Marketing</a></h3>
+                  <h3>
+                    <a href="./courses/digitalmarketing.html"
+                      >Digital Marketing</a
+                    >
+                  </h3>
                   <p class="description">
                     Learn how to effectively market products and services online
                     using SEO, content marketing, and social media strategies.
@@ -685,37 +691,6 @@
               </div>
             </div>
             <!-- End Digital Marketing Course-->
-
-
-            <!-- Cybersecurity Course -->
-            <div
-              class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4"
-              data-aos="zoom-in"
-              data-aos-delay="100"
-            >
-              <div class="course-item mt-4">
-                <img
-                  src="assets/img/courses/Cybersecurity.png"
-                  class="img-fluid"
-                  alt="..."
-                />
-                <div class="course-content">
-                  <div
-                    class="d-flex justify-content-between align-items-center mb-3"
-                  >
-                    <a href="./courses/cybersecurity.html" style="color: white">
-                      <p class="category">Know More</p>
-                    </a>
-                  </div>
-                  <h3><a href="./courses/cybersecurity.html">Cybersecurity</a></h3>
-                  <p class="description">
-                    Explore the essentials of network security, ethical hacking,
-                    and protecting systems from cyber threats.
-                  </p>
-                </div>
-              </div>
-            </div>
-            <!-- End Cybersecurity Course-->
 
             <!-- AI/ML Course -->
             <div
@@ -745,10 +720,41 @@
                 </div>
               </div>
             </div>
-            <!-- End AI/ML Course-->
+            <!-- End AI/ML -->
+
+            <!-- Cybersecurity Course -->
+            <div
+              class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4"
+              data-aos="zoom-in"
+              data-aos-delay="100"
+            >
+              <div class="course-item">
+                <img
+                  src="assets/img/courses/Cybersecurity-new.jpg"
+                  class="img-fluid"
+                  alt="..."
+                />
+                <div class="course-content">
+                  <div
+                    class="d-flex justify-content-between align-items-center mb-3"
+                  >
+                    <a href="./courses/ai-ml.html" style="color: white">
+                      <p class="category">Know More</p>
+                    </a>
+                  </div>
+                  <h3><a href="./courses/ai-ml.html">Cybersecurity</a></h3>
+                  <p class="description">
+                    Explore the essentials of network security, ethical hacking,
+                    and protecting systems from cyber threats.
+                  </p>
+                </div>
+              </div>
+            </div>
+            <!-- End Cybersecurity Course-->
           </div>
         </div>
       </section>
+      <!-- End Course Section -->
 
       <!-- Trainers Index Section -->
       <section id="trainers-index" class="section trainers-index">
@@ -880,7 +886,9 @@
               <p><strong>Email:</strong> <span>tipsgalwar@gmail.com </span></p>
             </div>
             <div class="social-links d-flex mt-4">
-              <a href="https://www.youtube.com/@TIPS-GALWAR"><i class="bi bi-youtube"></i></a>
+              <a href="https://www.youtube.com/@TIPS-GALWAR"
+                ><i class="bi bi-youtube"></i
+              ></a>
               <a href=""><i class="bi bi-facebook"></i></a>
               <a href=""><i class="bi bi-instagram"></i></a>
               <a href=""><i class="bi bi-linkedin"></i></a>
@@ -903,10 +911,16 @@
           <div class="col-lg-2 col-md-3 footer-links">
             <h4>Our Courses</h4>
             <ul>
-              <li><a href="./courses/software.html">Software Development</a></li>
+              <li>
+                <a href="./courses/software.html">Software Development</a>
+              </li>
               <li><a href="./courses/datascience.html">Data Science</a></li>
-              <li><a href="./courses/digitalmarketing.html">Digital Marketing</a></li>
-              <li><a href="./courses/blockchain.html">Blockchain Technology</a></li>
+              <li>
+                <a href="./courses/digitalmarketing.html">Digital Marketing</a>
+              </li>
+              <li>
+                <a href="./courses/blockchain.html">Blockchain Technology</a>
+              </li>
               <li><a href="./courses/ai-ml.html">AI/ML</a></li>
               <li><a href="./courses/cybersecurity.html">Cybersecurity</a></li>
             </ul>
