--- a/pages/courses.html
+++ b/pages/courses.html
@@ -33,7 +33,10 @@
       href="../assets/vendor/glightbox/css/glightbox.min.css"
       rel="stylesheet"
     />
-    <link href="../assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet" />
+    <link
+      href="../assets/vendor/swiper/swiper-bundle.min.css"
+      rel="stylesheet"
+    />
 
     <!-- Main CSS File -->
     <link href="../assets/css/main.css" rel="stylesheet" />
@@ -70,16 +73,26 @@
                 <i class="bi bi-chevron-down toggle-dropdown"></i
               ></a>
               <ul>
-                <li><a href="../courses/software.html">Software Development</a></li>
+                <li>
+                  <a href="../courses/software.html">Software Development</a>
+                </li>
                 <li><a href="../courses/datascience.html">Data Science</a></li>
-                <li><a href="../courses/digitalmarketing.html">Digital Marketing</a></li>
-                <li><a href="../courses/blockchain.html">Blockchain Technology</a></li>
-                <li><a href="../courses/cybersecurity.html">Cybersecurity</a></li>
+                <li>
+                  <a href="../courses/digitalmarketing.html"
+                    >Digital Marketing</a
+                  >
+                </li>
+                <li>
+                  <a href="../courses/blockchain.html">Blockchain Technology</a>
+                </li>
+                <li>
+                  <a href="../courses/cybersecurity.html">Cybersecurity</a>
+                </li>
                 <li><a href="../courses/ai-ml.html">AI/ML</a></li>
               </ul>
             </li>
             <!-- <li><a href="trainers.html">Trainers</a></li> -->
-            <li><a href="events.html">Events</a></li>
+            <!-- <li><a href="events.html">Events</a></li> -->
             <li><a href="exam.html" class="">Exam</a></li>
             <li>
               <a href="contact.html" style="padding-right: 130px">Contact</a>
@@ -113,7 +126,7 @@
               </div>
             </div>
           </div> -->
-          <div  class="container-fluid p-0 position-relative hero">
+          <div class="container-fluid p-0 position-relative hero">
             <video
               autoplay
               muted
@@ -413,14 +426,14 @@
                     class="d-flex justify-content-between align-items-center mb-3"
                   >
                     <!-- <p class="category" >
-                <a href="software.html" style="color: white;">Software Engineering</a>
-              </p> -->
-                    <a href="../courses/software.html" style="color: white">
+                            <a href="software.html" style="color: white;">Software Engineering</a>
+                          </p> -->
+                    <a href="./courses/software.html" style="color: white">
                       <p class="category">Know More</p>
                     </a>
                   </div>
                   <h3>
-                    <a href="../courses/software.html">Software Development</a>
+                    <a href="./courses/software.html">Software Development</a>
                   </h3>
                   <p class="description">
                     Learn the fundamentals of software development, design
@@ -447,11 +460,11 @@
                   <div
                     class="d-flex justify-content-between align-items-center mb-3"
                   >
-                    <a href="../courses/datascience.html" style="color: white">
+                    <a href="./courses/datascience.html" style="color: white">
                       <p class="category">Know More</p>
                     </a>
                   </div>
-                  <h3><a href="../courses/datascience.html">Data Science</a></h3>
+                  <h3><a href="./courses/datascience.html">Data Science</a></h3>
                   <p class="description">
                     Learn data analysis, machine learning algorithms, and
                     visualization tools to turn data into actionable insights.
@@ -477,12 +490,14 @@
                   <div
                     class="d-flex justify-content-between align-items-center mb-3"
                   >
-                    <a href="../courses/blockchain.html" style="color: white">
+                    <a href="./courses/blockchain.html" style="color: white">
                       <p class="category">Know More</p>
                     </a>
                   </div>
                   <h3>
-                    <a href="../courses/blockchain.html">Blockchain Technology</a>
+                    <a href="./courses/blockchain.html"
+                      >Blockchain Technology</a
+                    >
                   </h3>
                   <p class="description">
                     Discover the world of decentralized systems, blockchain
@@ -492,66 +507,6 @@
               </div>
             </div>
             <!-- End Blockchain Technology Course-->
-
-            <!-- Cybersecurity Course -->
-            <div
-              class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4"
-              data-aos="zoom-in"
-              data-aos-delay="100"
-            >
-              <div class="course-item mt-4">
-                <img
-                  src="../assets/img/courses/Cybersecurity.png"
-                  class="img-fluid"
-                  alt="..."
-                />
-                <div class="course-content">
-                  <div
-                    class="d-flex justify-content-between align-items-center mb-3"
-                  >
-                    <a href="../courses/cybersecurity.html" style="color: white">
-                      <p class="category">Know More</p>
-                    </a>
-                  </div>
-                  <h3><a href="../courses/cybersecurity.html">Cybersecurity</a></h3>
-                  <p class="description">
-                    Explore the essentials of network security, ethical hacking,
-                    and protecting systems from cyber threats.
-                  </p>
-                </div>
-              </div>
-            </div>
-            <!-- End Cybersecurity Course-->
-
-            <!-- AI/ML Course -->
-            <div
-              class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4"
-              data-aos="zoom-in"
-              data-aos-delay="100"
-            >
-              <div class="course-item">
-                <img
-                  src="../assets/img/courses/AIML-home.jpg"
-                  class="img-fluid"
-                  alt="..."
-                />
-                <div class="course-content">
-                  <div
-                    class="d-flex justify-content-between align-items-center mb-3"
-                  >
-                    <a href="../courses/ai-ml.html" style="color: white">
-                      <p class="category">Know More</p>
-                    </a>
-                  </div>
-                  <h3><a href="../courses/ai-ml.html">AI/ML</a></h3>
-                  <p class="description">
-                    Dive into Artificial Intelligence and Machine Learning,
-                    learning techniques to build intelligent systems.
-                  </p>
-                </div>
-              </div>
-            </div>
-            <!-- End AI/ML Course-->
 
             <!-- Digital Marketing Course -->
             <div
@@ -569,11 +524,18 @@
                   <div
                     class="d-flex justify-content-between align-items-center mb-3"
                   >
-                    <a href="../courses/digitalmarketing.html" style="color: white">
+                    <a
+                      href="./courses/digitalmarketing.html"
+                      style="color: white"
+                    >
                       <p class="category">Know More</p>
                     </a>
                   </div>
-                  <h3><a href="../courses/digitalmarketing.html">Digital Marketing</a></h3>
+                  <h3>
+                    <a href="./courses/digitalmarketing.html"
+                      >Digital Marketing</a
+                    >
+                  </h3>
                   <p class="description">
                     Learn how to effectively market products and services online
                     using SEO, content marketing, and social media strategies.
@@ -582,103 +544,142 @@
               </div>
             </div>
             <!-- End Digital Marketing Course-->
+
+            <!-- AI/ML Course -->
+            <div
+              class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4"
+              data-aos="zoom-in"
+              data-aos-delay="100"
+            >
+              <div class="course-item">
+                <img
+                  src="../assets/img/courses/AIML-home.jpg"
+                  class="img-fluid"
+                  alt="..."
+                />
+                <div class="course-content">
+                  <div
+                    class="d-flex justify-content-between align-items-center mb-3"
+                  >
+                    <a href="./courses/ai-ml.html" style="color: white">
+                      <p class="category">Know More</p>
+                    </a>
+                  </div>
+                  <h3><a href="./courses/ai-ml.html">AI/ML</a></h3>
+                  <p class="description">
+                    Dive into Artificial Intelligence and Machine Learning,
+                    learning techniques to build intelligent systems.
+                  </p>
+                </div>
+              </div>
+            </div>
+            <!-- End AI/ML -->
+
+            <!-- Cybersecurity Course -->
+            <div
+              class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4"
+              data-aos="zoom-in"
+              data-aos-delay="100"
+            >
+              <div class="course-item">
+                <img
+                  src="../assets/img/courses/Cybersecurity-new.jpg"
+                  class="img-fluid"
+                  alt="..."
+                />
+                <div class="course-content">
+                  <div
+                    class="d-flex justify-content-between align-items-center mb-3"
+                  >
+                    <a href="./courses/ai-ml.html" style="color: white">
+                      <p class="category">Know More</p>
+                    </a>
+                  </div>
+                  <h3><a href="./courses/ai-ml.html">Cybersecurity</a></h3>
+                  <p class="description">
+                    Explore the essentials of network security, ethical hacking,
+                    and protecting systems from cyber threats.
+                  </p>
+                </div>
+              </div>
+            </div>
+            <!-- End Cybersecurity Course-->
           </div>
         </div>
       </section>
+      <!-- End Course Section -->
     </main>
 
+
+    <!-- Footer Start -->
     <footer
-      id="footer"
-      class="footer position-relative light-background"
-      style="border-top: 3px solid #29206f"
-    >
-      <div class="container footer-top">
-        <div class="row" style="display: flex; justify-content: space-around">
-          <div class="col-lg-4 col-md-6 footer-about">
-            <a href="../index.html" class="logo d-flex align-items-center">
-              <span class="sitename"
-                >TIPS-G <br />
-                ALWAR</span
-              >
-            </a>
-            <div class="footer-contact pt-3">
-              <p>1<sup>st</sup> Floor, Shri Hari Laxmi Tower,</p>
-              <p>Bhagat Singh Circle,</p>
-              <p>Alwar, Rajasthan 301001</p>
-              <p class="mt-3">
-                <strong>Phone:</strong> <span>+91 8890007437 </span><br />
-                <strong>Phone:</strong> <span>+91 8890007536</span>
-              </p>
-              <p><strong>Email:</strong> <span>tipsgalwar@gmail.com </span></p>
-            </div>
-            <div class="social-links d-flex mt-4">
-              <a href=""><i class="bi bi-twitter-x"></i></a>
-              <a href=""><i class="bi bi-facebook"></i></a>
-              <a href=""><i class="bi bi-instagram"></i></a>
-              <a href=""><i class="bi bi-linkedin"></i></a>
-            </div>
-          </div>
-
-          <div class="col-lg-2 col-md-3 footer-links">
-            <h4>Useful Links</h4>
-            <ul>
-<li><a href="../index.html">Home</a></li>
-              <li><a href="about.html">About us</a></li>
-              <li><a href="courses.html">Courses</a></li>
-              <li><a href="events.html">Events</a></li>
-              <li><a href="exam.html">Exam</a></li>
-              <li><a href="terms.html">Terms</a></li>
-              <li><a href="privacypolicy.html">Privacy policy</a></li>
-            </ul>
-          </div>
-
-          <div class="col-lg-2 col-md-3 footer-links">
-            <h4>Our Courses</h4>
-            <ul>
-              <li><a href="../courses/software.html">Software Development</a></li>
-              <li><a href="../courses/datascience.html">Data Science</a></li>
-              <li><a href="../courses/blockchain.html">Blockchain Technology</a></li>
-              <li><a href="../courses/ai-ml.html">AI/ML</a></li>
-              <li><a href="../courses/cybersecurity.html">Cybersecurity</a></li>
-              <li><a href="../courses/digitalmarketing.html">Digital Marketing</a></li>
-            </ul>
-          </div>
-
-          <!-- <div class="col-lg-4 col-md-12 footer-newsletter">
-            <h4>Our Newsletter</h4>
-            <p>
-              Subscribe to our newsletter and receive the latest news about our
-              products and services!
-            </p>
-            <form
-              action="forms/newsletter.php"
-              method="post"
-              class="php-email-form"
+    id="footer"
+    class="footer position-relative light-background"
+    style="border-top: 3px solid #29206f"
+  >
+    <div class="container footer-top">
+      <div class="row" style="display: flex; justify-content: space-around">
+        <div class="col-lg-4 col-md-6 footer-about">
+          <a href="../index.html" class="logo d-flex align-items-center">
+            <span class="sitename"
+              ><b>TIPS-G</b> <br />
+              <b>ALWAR</b></span
             >
-              <div class="newsletter-form">
-                <input type="email" name="email" /><input
-                  type="submit"
-                  value="Subscribe"
-                />
-              </div>
-              <div class="loading">Loading</div>
-              <div class="error-message"></div>
-              <div class="sent-message">
-                Your subscription request has been sent. Thank you!
-              </div>
-            </form>
-          </div> -->
+          </a>
+          <div class="footer-contact pt-3">
+            <p>1<sup>st</sup> Floor, Shri Hari Laxmi Tower,</p>
+            <p>Bhagat Singh Circle,</p>
+            <p>Alwar, Rajasthan 301001</p>
+            <p class="mt-3">
+              <strong>Phone:</strong> <span>+91 8890007437 </span><br />
+              <strong>Phone:</strong> <span>+91 8890007536</span>
+            </p>
+            <p><strong>Email:</strong> <span>tipsgalwar@gmail.com </span></p>
+          </div>
+          <div class="social-links d-flex mt-4">
+            <a href="https://www.youtube.com/@TIPS-GALWAR"><i class="bi bi-youtube"></i></a>
+            <a href=""><i class="bi bi-facebook"></i></a>
+            <a href=""><i class="bi bi-instagram"></i></a>
+            <a href=""><i class="bi bi-linkedin"></i></a>
+          </div>
+        </div>
+
+        <div class="col-lg-2 col-md-3 footer-links">
+          <h4>Useful Links</h4>
+          <ul>
+            <li><a href="../index.html">Home</a></li>
+            <li><a href="./pages/about.html">About us</a></li>
+            <li><a href="./pages/courses.html">Courses</a></li>
+            <li><a href="./pages/events.html">Events</a></li>
+            <li><a href="./pages/exam.html">Exam</a></li>
+            <li><a href="./pages/terms.html">Terms</a></li>
+            <li><a href="./pages/privacypolicy.html">Privacy policy</a></li>
+          </ul>
+        </div>
+
+        <div class="col-lg-2 col-md-3 footer-links">
+          <h4>Our Courses</h4>
+          <ul>
+            <li><a href="../courses/software.html">Software Development</a></li>
+            <li><a href="../courses/datascience.html">Data Science</a></li>
+            <li><a href="../courses/digitalmarketing.html">Digital Marketing</a></li>
+            <li><a href="../courses/blockchain.html">Blockchain Technology</a></li>
+            <li><a href="../courses/ai-ml.html">AI/ML</a></li>
+            <li><a href="../courses/cybersecurity.html">Cybersecurity</a></li>
+          </ul>
         </div>
       </div>
+    </div>
 
-      <div class="container copyright text-center mt-4">
-        <p>
-          © <span>Copyright</span>
-          <strong>TIPS-G Alwar</strong>
-          <span>All Rights Reserved</span>
-        </p>
-      </div>
-    </footer>
+    <div class="container copyright text-center mt-4">
+      <p>
+        © <span>Copyright</span>
+        <b>TIPS-G Alwar</b>
+        <span>All Rights Reserved</span>
+      </p>
+    </div>
+  </footer>
+  <!-- Footer End -->
 
     <!-- Scroll Top -->
     <a
