--- a/pages/events.html
+++ b/pages/events.html
@@ -66,7 +66,7 @@
             </ul>
           </li>
           <!-- <li><a href="trainers.html">Trainers</a></li> -->
-          <li><a href="events.html"  class="active">Events</a></li>
+          <!-- <li><a href="events.html"  class="active">Events</a></li> -->
           <li><a href="exam.html" class="">Exam</a></li>
           <li><a href="contact.html" style="padding-right: 130px;">Contact</a></li>
           <li>
@@ -257,26 +257,33 @@
 
   </main>
 
-  <footer id="footer" class="footer position-relative light-background" style="border-top: 3px solid #29206f;">
-    <div class="container footer-top" >
-      <div class="row" style="display: flex;justify-content: space-around;">
+    <!-- Footer Start -->
+    <footer
+    id="footer"
+    class="footer position-relative light-background"
+    style="border-top: 3px solid #29206f"
+  >
+    <div class="container footer-top">
+      <div class="row" style="display: flex; justify-content: space-around">
         <div class="col-lg-4 col-md-6 footer-about">
           <a href="../index.html" class="logo d-flex align-items-center">
-            <span class="sitename">TIPS-G <br> ALWAR</span>
+            <span class="sitename"
+              ><b>TIPS-G</b> <br />
+              <b>ALWAR</b></span
+            >
           </a>
           <div class="footer-contact pt-3">
             <p>1<sup>st</sup> Floor, Shri Hari Laxmi Tower,</p>
             <p>Bhagat Singh Circle,</p>
             <p>Alwar, Rajasthan 301001</p>
             <p class="mt-3">
-              <strong>Phone:</strong> <span>+91 8890007437 </span><br>
+              <strong>Phone:</strong> <span>+91 8890007437 </span><br />
               <strong>Phone:</strong> <span>+91 8890007536</span>
             </p>
-            <p><strong>Email:</strong> <span>tipsgalwar@gmail.com
-            </span></p>
+            <p><strong>Email:</strong> <span>tipsgalwar@gmail.com </span></p>
           </div>
           <div class="social-links d-flex mt-4">
-            <a href=""><i class="bi bi-twitter-x"></i></a>
+            <a href="https://www.youtube.com/@TIPS-GALWAR"><i class="bi bi-youtube"></i></a>
             <a href=""><i class="bi bi-facebook"></i></a>
             <a href=""><i class="bi bi-instagram"></i></a>
             <a href=""><i class="bi bi-linkedin"></i></a>
@@ -284,74 +291,41 @@
         </div>
 
         <div class="col-lg-2 col-md-3 footer-links">
-            <h4>Useful Links</h4>
-            <ul>
-<li><a href="../index.html">Home</a></li>
-              <li><a href="about.html">About us</a></li>
-              <li><a href="courses.html">Courses</a></li>
-              <li><a href="events.html">Events</a></li>
-              <li><a href="exam.html">Exam</a></li>
-              <li><a href="terms.html">Terms</a></li>
-              <li><a href="privacypolicy.html">Privacy policy</a></li>
-            </ul>
-          </div>
+          <h4>Useful Links</h4>
+          <ul>
+            <li><a href="../index.html">Home</a></li>
+            <li><a href="./pages/about.html">About us</a></li>
+            <li><a href="./pages/courses.html">Courses</a></li>
+            <li><a href="./pages/events.html">Events</a></li>
+            <li><a href="./pages/exam.html">Exam</a></li>
+            <li><a href="./pages/terms.html">Terms</a></li>
+            <li><a href="./pages/privacypolicy.html">Privacy policy</a></li>
+          </ul>
+        </div>
 
-          <div class="col-lg-2 col-md-3 footer-links">
-            <h4>Our Courses</h4>
-            <ul>
-              <li><a href="../courses/software.html">Software Development</a></li>
-              <li><a href="../courses/datascience.html">Data Science</a></li>
-              <li><a href="../courses/blockchain.html">Blockchain Technology</a></li>
-              <li><a href="../courses/ai-ml.html">AI/ML</a></li>
-              <li><a href="../courses/cybersecurity.html">Cybersecurity</a></li>
-              <li><a href="../courses/digitalmarketing.html">Digital Marketing</a></li>
-            </ul>
-          </div>
-
-        <!-- <div class="col-lg-4 col-md-12 footer-newsletter">
-          <h4>Our Newsletter</h4>
-          <p>
-            Subscribe to our newsletter and receive the latest news about our
-            products and services!
-          </p>
-          <form
-            action="forms/newsletter.php"
-            method="post"
-            class="php-email-form"
-          >
-            <div class="newsletter-form">
-              <input type="email" name="email" /><input
-                type="submit"
-                value="Subscribe"
-              />
-            </div>
-            <div class="loading">Loading</div>
-            <div class="error-message"></div>
-            <div class="sent-message">
-              Your subscription request has been sent. Thank you!
-            </div>
-          </form>
-        </div> -->
+        <div class="col-lg-2 col-md-3 footer-links">
+          <h4>Our Courses</h4>
+          <ul>
+            <li><a href="../courses/software.html">Software Development</a></li>
+            <li><a href="../courses/datascience.html">Data Science</a></li>
+            <li><a href="../courses/digitalmarketing.html">Digital Marketing</a></li>
+            <li><a href="../courses/blockchain.html">Blockchain Technology</a></li>
+            <li><a href="../courses/ai-ml.html">AI/ML</a></li>
+            <li><a href="../courses/cybersecurity.html">Cybersecurity</a></li>
+          </ul>
+        </div>
       </div>
     </div>
 
     <div class="container copyright text-center mt-4">
       <p>
         © <span>Copyright</span>
-        <strong>TIPS-G Alwar</strong>
+        <b>TIPS-G Alwar</b>
         <span>All Rights Reserved</span>
       </p>
-      <!-- <div class="credits"> -->
-        <!-- All the links in the footer should remain intact. -->
-        <!-- You can delete the links only if you've purchased the pro version. -->
-        <!-- Licensing information: https://bootstrapmade.com/license/ -->
-        <!-- Purchase the pro version with working PHP/AJAX contact form: [buy-url] -->
-        <!-- Designed by
-        <a href="https://bootstrapmade.com/">Abhishek Sain</a> -->
-      
-      <!-- </div> -->
     </div>
   </footer>
+  <!-- Footer End -->
 
   <!-- Scroll Top -->
   <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
